mobile nav was overlapping which is fixed

--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -84,6 +84,7 @@
             color: white;
             background-color: $primary-color;
             padding: 1rem;
+            z-index: 9;
         }
 
         .header {
